--- a/mystery.css
+++ b/mystery.css
@@ -47,20 +47,25 @@ body {
 
 .main-container {
   display: grid;
+  margin: 10px;
   grid-template-columns: 4fr 1fr;
 }
 
 .mystery-container {
   display: grid;
-  grid-template-columns: repeat(2);
-  margin: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  margin-right: 5px;
+  grid-gap: 12px;
 }
 
 /***********SANITY TRACKERS*************/
 
 /*SCOOP-SANITY */
 #scoop-sanity {
-  grid-column: 1/2;
+}
+
+.scoop-sanity .box {
+  background-color: rgb(107, 112, 83);
 }
 .scoop-sanity {
   display: grid;
@@ -94,12 +99,21 @@ body {
   cursor: grab;
 }
 
+/** BOX-CONTAINER**/
+
 .box {
   display: block;
   height: 58px;
-  width: auto;
+  width: 58px;
   margin: 2px auto 2px auto;
-  background-color: rgb(107, 112, 83);
+}
+
+.box-container {
+  margin: 4px;
+  width: 56px;
+}
+.box-container input {
+  width: 59px;
 }
 
 /*SHOP-SANITY*/
@@ -107,36 +121,199 @@ body {
 #shop-sanity {
   grid-column: 2/3;
 }
+#shop-title {
+  grid-column: 1/3;
+}
+.shop-title {
+  display: grid;
+  grid-template-columns: 8fr 1fr;
+}
+.swap-btn {
+  align-self: center;
+  justify-self: center;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  height: 20px;
+  width: 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  border: 2px solid rgb(255, 255, 255);
+  background-color: red;
+}
 .shop-sanity {
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: 1fr;
   border-radius: 20px;
-  width: 700px;
+  height: 510px;
+  width: 400px;
   overflow: hidden;
-  background-color: rgb(145, 170, 207);
+  background-color: rgb(255, 255, 255);
 }
 .shop-late {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr 1fr;
 }
-.shop-sanity h2 {
-  grid-column: 1/7;
-  grid-row: 1/2;
-}
-.shop-sanity h2,
-.shop-sanity h2 {
+
+.shop-title h1 {
   font-size: 1.4rem;
   color: white;
   text-align: center;
-  background-color: rgb(49, 74, 166);
   border-bottom: 1px solid black;
 }
-.shop {
-  border-radius: 6px;
-  margin: 2px;
-  border: 3px solid rgb(49, 74, 166);
+.box-container .item {
+  display: block;
+  width: 100%;
+  cursor: grab;
+}
+.wct-shop .box-container {
+  margin: 10px;
+}
+#wct-shop {
+  grid-column: 1/2;
+  grid-row: 2/5;
+}
+#goron-shop {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+#zora-shop {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+#milk-bar {
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+.wct-shop {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 9px;
+  border-radius: 20px;
+}
+.wct-shop h2 {
+  grid-column: 1/3;
+}
+.wct-shop h2,
+.goron-shop h2,
+.zora-shop h2,
+.milk-bar h2 {
+  color: white;
+  border-bottom: 1px solid black;
+  text-align: center;
+  align-content: center;
+}
+
+.goron-shop h2,
+.zora-shop h2,
+.milk-bar h2 {
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+.goron-shop,
+.zora-shop {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 3fr;
+  margin: 10px;
+  border-radius: 20px;
+}
+.goron-shop .box-container,
+.zora-shop .box-container,
+.milk-bar .box-container {
+  grid-row: 2/3;
+}
+
+.shop-late h1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  background-color: rgb(104, 80, 65);
+}
+.wct-shop .box,
+.goron-shop .box,
+.zora-shop .box,
+.milk-bar .box {
+  background-color: rgb(155, 147, 138);
+  border-radius: 10px;
+}
+.shop-late .box {
+  border: 3px solid rgb(244, 244, 235);
+}
+.wct-shop,
+.goron-shop,
+.zora-shop,
+.milk-bar {
+  border: 5px solid rgb(62, 42, 0);
+  background-color: rgb(98, 80, 68);
+}
+.milk-bar {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 3fr;
+  margin: 10px;
+  justify-self: center;
+  border-radius: 20px;
+}
+/***************/
+.shop-full {
+  display: none;
+  background-color: rgb(90, 74, 48);
+  border-left: 1px solid black;
+}
+.shop-full h1 {
+  background-color: rgb(47, 34, 26);
+}
+/*NOTES*/
+#notes-container {
+  grid-column: 3/4;
+}
+#text-box {
+  max-height: 200px;
+  min-width: 100%;
+  max-width: 100%;
+}
+.notes-container {
+  display: grid;
+  height: 506px;
+  width: 400px;
+  overflow: hidden;
+  text-align: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 3fr 1fr 3fr;
+  border-radius: 20px;
+  background-color: rgb(241, 234, 234);
+}
+.to-do h2,
+.woth h2,
+.foolish h2 {
+  font-weight: 500;
+  border: 1px solid black;
+}
+.to-do h2 {
+  grid-row: 2/3;
+  background-color: rgb(5, 162, 10);
+}
+
+.woth h2 {
+  grid-row: 3/4;
+  background-color: rgb(255, 204, 0);
+}
+
+.foolish h2 {
+  grid-row: 4/5;
+  background-color: red;
+}
+.to-do input {
+}
+.notes-container input {
+  width: 100%;
+  font-size: 1.2rem;
+  height: 30px;
+  border: 1px solid black;
 }
 /*TRACKER*/
 .tracker-container {
   width: 100%;
+  color: white;
 }
 .item-container,
 .mask-container,
