--- a/mystery.css
+++ b/mystery.css
@@ -60,7 +60,7 @@ body {
 
 /***********SANITY TRACKERS*************/
 /*SCOOP+COW+SOIL*/
-.sanity-bundle-container {
+.sanity-bundle-container1 {
   display: grid;
   grid-template-columns: 125px 280px;
   grid-template-rows: 1fr 1fr 1fr;
@@ -82,7 +82,7 @@ body {
 /* SCOOP-SANITY */
 
 .scoop-sanity .box {
-  background-color: rgb(186, 255, 197);
+  background-color: rgb(88, 255, 116);
 }
 .scoop-sanity {
   display: grid;
@@ -92,14 +92,14 @@ body {
   width: 120px;
   border-radius: 20px;
   overflow: hidden;
-  background-color: rgb(45, 109, 68);
+  background-color: rgb(3, 105, 41);
 }
 .scoop-sanity h2 {
   grid-column: 1/3;
   font-size: 1.4rem;
   color: white;
   text-align: center;
-  background-color: rgb(31, 64, 40);
+  background-color: rgb(2, 59, 17);
   border-bottom: 1px solid black;
 }
 
@@ -195,7 +195,7 @@ body {
   height: 335px;
   border-radius: 20px;
   overflow: hidden;
-  background-color: rgb(239, 227, 132);
+  background-color: rgb(247, 211, 52);
 }
 .soil-container {
   border: 1px solid black;
@@ -214,7 +214,7 @@ body {
 }
 .soil-container h2,
 .soil-container h3 {
-  background-color: rgb(140, 121, 36);
+  background-color: rgb(167, 105, 6);
   border-bottom: 2px solid black;
 }
 .soil-container img {
@@ -223,7 +223,7 @@ body {
 .soil-sanity h1 {
   font-size: 1.5rem;
   border-bottom: 1px solid black;
-  background-color: rgb(86, 78, 17);
+  background-color: rgb(136, 85, 4);
 }
 
 .soil-sanity img {
@@ -231,7 +231,7 @@ body {
   height: 40px;
   width: 40px;
   margin: 2px;
-  background-color: rgb(190, 228, 139);
+  background-color: rgb(217, 251, 188);
   border-radius: 10px;
   cursor: pointer;
   border: 2px solid black;
@@ -244,14 +244,13 @@ body {
 }
 .shop-sanity {
   border-radius: 20px;
-  height: 510px;
   width: 405px;
   overflow: hidden;
 }
 .shop-title {
   display: grid;
+  width: 405px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 30px auto;
 }
 .shop-late .swap-btn {
   cursor: pointer;
@@ -384,6 +383,7 @@ body {
   display: none;
   height: 510px;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 30px auto;
   background-color: rgb(207, 218, 229);
   border-left: 1px solid black;
 }
@@ -393,11 +393,10 @@ body {
   border: none;
   font-size: 1.5rem;
   color: white;
-  align-items: center;
   text-align: center;
   border-right: 2px solid black;
   border-bottom: 2px solid black;
-  background-color: rgb(29, 62, 106);
+  background-color: rgb(17, 74, 148);
 }
 .shop-full,
 .shop-full h1 {
@@ -406,23 +405,34 @@ body {
   background-color: rgb(192, 26, 26);
 }
 .bomb-shop h2,
-.kotake-shop h2,
-.scrub h2 {
+.kotake-shop h2 {
   grid-column: 1/4;
   grid-row: 1/2;
 }
 .bomb-shop,
-.kotake-shop {
+.kotake-shop,
+.scrub-shop {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 3fr;
+  width: 100%;
   margin: 10px;
   border-radius: 20px;
+  grid-template-rows: 40px auto;
+}
+.scrub-shop {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 3fr;
+}
+.scrub-shop h2 {
+  grid-column: 1/3;
+}
+.bomb-shop,
+.kotake-shop {
+  grid-template-columns: repeat(3, 1fr);
 }
 .bomb-shop .box,
 .kotake-shop .box,
 .scrub-shop .box,
-.gorman-bar .box {
+.gorman-shop .box {
   background-color: rgb(155, 147, 138);
   border-radius: 10px;
 }
@@ -431,8 +441,22 @@ body {
 }
 .bomb-shop,
 .kotake-shop,
-.scrub .gorman-bar {
-  background-color: rgb(237, 0, 87);
+.scrub-shop,
+.gorman-shop {
+  background-color: rgb(141, 0, 23);
+}
+#bomb-shop {
+  grid-column: 1/2;
+}
+#kotake-shop {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+#scrub-shop {
+  grid-column: 2/3;
+}
+#gorman-shop {
+  grid-column: 2/3;
 }
 /*NOTES*/
 
@@ -467,9 +491,9 @@ body {
 }
 .notes-container .box-container {
   display: flex;
+  flex-wrap: wrap;
   width: 150px;
   margin: auto;
-  flex-wrap: wrap;
 }
 .woth,
 .foolish,
@@ -539,16 +563,16 @@ body {
   height: 25px;
   width: 175px;
 }
-.box-container > .item,
-.quests > .item {
+.foolish .box-container .item {
   display: block;
   height: 30px;
   width: 30px;
   margin: 2px auto 2px auto;
 }
-.quests > .item {
+.quests .item {
   height: 25px;
   width: 25px;
+  margin-top: 3px;
 }
 .autocomplete-list button {
   width: 250px;
@@ -558,8 +582,96 @@ body {
   position: absolute;
   text-align: left;
 }
+/* HIT-SPOT + CRATES & BARRELS */
+.sanity-bundle-container2 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 405px;
+  height: 510px;
+}
+/* HIT-SPOT   */
+.hit-spot-sanity {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 30px auto;
+  border-radius: 20px;
+  height: 255px;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgb(28, 203, 159);
+}
 
-/*TRACKER*/
+.hit-spot-sanity h1 {
+  grid-column: 1/4;
+  color: white;
+  text-align: center;
+  background-color: rgb(4, 69, 64);
+  border-bottom: 1px solid black;
+}
+
+.hit-spot-sanity img {
+  filter: grayscale(0);
+  height: 40px;
+  width: 40px;
+  margin-top: 5px;
+  background-color: rgb(190, 228, 139);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid black;
+}
+
+.hit-spot-container {
+  border: 1px solid black;
+}
+.hit-spot-container h2 {
+  font-size: 1rem;
+  color: white;
+  text-align: center;
+  background-color: rgb(5, 110, 94);
+  border-bottom: 2px solid black;
+}
+#streched-container {
+  grid-column: 1/4;
+}
+/* CRATES & BARRELS */
+.cratesBarrels-sanity {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 30px auto;
+  border-radius: 20px;
+  height: 245px;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgb(191, 119, 51);
+}
+.cratesBarrels-sanity h1 {
+  grid-column: 1/4;
+  color: white;
+  text-align: center;
+  background-color: rgb(69, 37, 4);
+  border-bottom: 1px solid black;
+}
+.cratesBarrels-container h2 {
+  font-size: 1rem;
+  color: white;
+  text-align: center;
+  background-color: rgb(110, 52, 5);
+  border-bottom: 2px solid black;
+}
+.cratesBarrels-container {
+  border: 1px solid black;
+}
+.cratesBarrels-sanity img {
+  filter: grayscale(0);
+  height: 40px;
+  width: 40px;
+  margin-top: 5px;
+  background-color: rgb(228, 218, 139);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid black;
+}
+/* TRACKER */
 .tracker-container {
   width: 100%;
   color: white;
