--- a/mystery.css
+++ b/mystery.css
@@ -82,7 +82,16 @@ body {
 /* SCOOP-SANITY */
 
 .scoop-sanity .box {
+  height: 50px;
+  width: 50px;
+  margin-top: 3px;
+  border-radius: 10px;
+  translate: -4px;
   background-color: rgb(88, 255, 116);
+}
+.scoop-sanity .box img {
+  height: 48px;
+  width: 48px;
 }
 .scoop-sanity {
   display: grid;
@@ -107,12 +116,14 @@ body {
   grid-template-columns: 1/2;
 }
 .bottle-list {
+  translate: -4px;
   border-right: 2px solid black;
 }
 .bottle-list .item,
 .bottle-drop-container .item {
   display: block;
-  width: 100%;
+  height: 51px;
+  width: 51px;
   margin: 2px auto 2px auto;
   cursor: grab;
 }
@@ -581,6 +592,9 @@ body {
   border-radius: none;
   position: absolute;
   text-align: left;
+  color: white;
+  padding: 2px;
+  background-color: rgb(0, 54, 0);
 }
 /* HIT-SPOT + CRATES & BARRELS */
 .sanity-bundle-container2 {
@@ -671,9 +685,54 @@ body {
   cursor: pointer;
   border: 2px solid black;
 }
+/* MUNDANE  */
+.mundane-sanity {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 30px auto;
+  height: 255px;
+  width: 405px;
+  overflow: hidden;
+  border-radius: 20px;
+  background-color: rgb(112, 112, 229);
+}
+.mundane-sanity h1,
+.mundane-sanity h2 {
+  font-size: 1.5rem;
+  text-align: center;
+  color: white;
+}
+.mundane-sanity h1 {
+  grid-column: 1/4;
+  grid-row: 1/2;
+  border-bottom: 1px solid black;
+  background-color: rgb(38, 37, 101);
+}
+.mundane-sanity h2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  font-size: 1rem;
+  border-bottom: 2px solid black;
+  background-color: rgb(59, 57, 149);
+}
+.mundane-container {
+  border: 1px solid black;
+}
+.mundane-sanity img {
+  filter: grayscale(0);
+  height: 40px;
+  width: 40px;
+  margin-top: 5px;
+  background-color: rgb(228, 218, 139);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid black;
+}
+.mundane-container #streched-container {
+  grid-template-columns: 1/4;
+}
 /* TRACKER */
 .tracker-container {
-  width: 100%;
   color: white;
 }
 .item-container,
