--- a/mystery.css
+++ b/mystery.css
@@ -8,7 +8,25 @@
 body {
   background-color: black;
 }
+input {
+  font-size: 1rem;
+  height: 20px;
+  font-weight: 600;
+}
+h1 {
+  font-size: 1.5rem;
+}
+h2 {
+  font-size: 1rem;
+}
 
+button {
+  cursor: pointer;
+  border: none;
+  font-size: 1.5rem;
+  color: white;
+  text-align: center;
+}
 /* HEADER */
 
 .menu {
@@ -62,7 +80,7 @@ body {
 /*SCOOP+COW+SOIL*/
 .sanity-bundle-container1 {
   display: grid;
-  grid-template-columns: 125px 280px;
+  grid-template-columns: 125px auto;
   grid-template-rows: 1fr 1fr 1fr;
   height: 510px;
 }
@@ -264,11 +282,6 @@ body {
   grid-template-columns: 1fr 1fr;
 }
 .shop-late .swap-btn {
-  cursor: pointer;
-  border: none;
-  font-size: 1.5rem;
-  color: white;
-  text-align: center;
   border-left: 2px solid black;
   border-bottom: 2px solid black;
   background-color: rgb(159, 9, 74);
@@ -603,13 +616,13 @@ body {
   width: 405px;
   height: 510px;
 }
-/* HIT-SPOT   */
+/* HIT-SPOT  */
 .hit-spot-sanity {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 30px auto;
   border-radius: 20px;
-  height: 255px;
+  height: 260px;
   width: 100%;
   overflow: hidden;
   background-color: rgb(28, 203, 159);
@@ -628,10 +641,10 @@ body {
   height: 40px;
   width: 40px;
   margin-top: 5px;
-  background-color: rgb(190, 228, 139);
+  background-color: rgb(238, 255, 217);
   border-radius: 10px;
   cursor: pointer;
-  border: 2px solid black;
+  border: 2px solid rgb(36, 92, 31);
 }
 
 .hit-spot-container {
@@ -655,6 +668,7 @@ body {
   border-radius: 20px;
   height: 245px;
   width: 100%;
+  margin-top: 5px;
   overflow: hidden;
   background-color: rgb(191, 119, 51);
 }
@@ -685,35 +699,42 @@ body {
   cursor: pointer;
   border: 2px solid black;
 }
+/* MUNDANE + SNOWBALLS */
+.sanity-bundle-container3 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 405px;
+  height: 510px;
+}
 /* MUNDANE  */
 .mundane-sanity {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 30px auto;
-  height: 255px;
+  height: 260px;
   width: 405px;
   overflow: hidden;
   border-radius: 20px;
-  background-color: rgb(112, 112, 229);
+  background-color: rgb(191, 151, 255);
 }
 .mundane-sanity h1,
 .mundane-sanity h2 {
-  font-size: 1.5rem;
   text-align: center;
   color: white;
 }
 .mundane-sanity h1 {
+  font-size: 1.5rem;
   grid-column: 1/4;
   grid-row: 1/2;
   border-bottom: 1px solid black;
-  background-color: rgb(38, 37, 101);
+  background-color: rgb(72, 0, 136);
 }
 .mundane-sanity h2 {
   grid-column: 1/2;
   grid-row: 2/3;
   font-size: 1rem;
   border-bottom: 2px solid black;
-  background-color: rgb(59, 57, 149);
+  background-color: rgb(106, 0, 193);
 }
 .mundane-container {
   border: 1px solid black;
@@ -723,16 +744,212 @@ body {
   height: 40px;
   width: 40px;
   margin-top: 5px;
-  background-color: rgb(228, 218, 139);
+  background-color: rgb(178, 169, 255);
   border-radius: 10px;
   cursor: pointer;
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
 }
 .mundane-container #streched-container {
   grid-template-columns: 1/4;
 }
+/* SNOWBALL-SANITY */
+.snowball-sanity {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 30px auto;
+  height: 245px;
+  width: 405px;
+  overflow: hidden;
+  border-radius: 20px;
+  margin-top: 5px;
+  background-color: rgb(72, 170, 231);
+}
+.snowball-sanity h1,
+.snowball-sanity h2 {
+  text-align: center;
+  color: white;
+}
+.snowball-sanity h1 {
+  font-size: 1.5rem;
+  grid-column: 1/4;
+  grid-row: 1/2;
+  border-bottom: 1px solid black;
+  background-color: rgb(0, 77, 164);
+}
+.snowball-sanity h2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  font-size: 1rem;
+  border-bottom: 2px solid black;
+  background-color: rgb(3, 107, 204);
+}
+.snowball-container {
+  border: 1px solid black;
+}
+.snowball-sanity img {
+  filter: grayscale(0);
+  height: 40px;
+  width: 40px;
+  margin-top: 5px;
+  background-color: rgb(204, 228, 139);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid black;
+}
+
+/* RUPEE-SANITY */
+.rupee-sanity {
+  height: 510px;
+  width: 405px;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.rupee-titles {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.red-dungeon-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.rupee-sanity h1,
+.rupee-sanity h2 {
+  text-align: center;
+  color: white;
+}
+.rupee-sanity h1 {
+  font-size: 1.5rem;
+  border-bottom: 1px solid black;
+  align-content: center;
+}
+#red-btn {
+  background-color: red;
+}
+#blue-btn {
+  background-color: blue;
+}
+#green-btn {
+  background-color: green;
+}
+.rupee-sanity img {
+  filter: grayscale(0);
+  height: 40px;
+  width: 40px;
+  margin: 5px;
+  background-color: rgb(242, 255, 207);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid black;
+}
+/*RED*/
+.red-wrapper {
+  display: block;
+}
+.red-dungeon-container,
+.red-overworld-container {
+  display: grid;
+  height: 240px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px auto;
+}
+.red-rupee-container {
+  border: 1px solid black;
+  background-color: rgb(255, 118, 87);
+}
+.red-dungeon-container h1,
+.red-overworld-container h1 {
+  grid-column: 1/4;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: rgb(113, 0, 0);
+}
+.red-rupee-container h2 {
+  font-size: 1rem;
+  border-bottom: 2px solid black;
+  background-color: rgb(196, 0, 0);
+}
+
+.red-dungeon-container .streched-container {
+  grid-column: 1/4;
+}
+.red-overworld-container > .streched-container {
+  grid-column: 2/4;
+}
+
+/* BLUE */
+.blue-wrapper {
+  display: none;
+}
+.blue-dungeon-container {
+  height: 190px;
+}
+.blue-dungeon-container,
+.blue-overworld-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px auto;
+}
+.blue-rupee-container {
+  border: 1px solid black;
+  background-color: rgb(87, 126, 255);
+}
+.blue-dungeon-container h1,
+.blue-overworld-container h1 {
+  grid-column: 1/4;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: rgb(0, 8, 113);
+}
+.blue-rupee-container h2 {
+  font-size: 1rem;
+  border-bottom: 2px solid black;
+  background-color: rgb(0, 10, 196);
+}
+.blue-dungeon-container .streched-container {
+  grid-column: 1/4;
+}
+.blue-overworld-container > .streched-container {
+  grid-column: 2/4;
+}
+/* GREEN */
+.green-wrapper {
+  display: none;
+}
+.green-dungeon-container {
+  height: 190px;
+}
+.green-dungeon-container,
+.green-overworld-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px auto;
+}
+.green-rupee-container {
+  border: 1px solid black;
+  background-color: rgb(22, 199, 28);
+}
+.green-dungeon-container h1,
+.green-overworld-container h1 {
+  grid-column: 1/4;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: rgb(5, 76, 0);
+}
+.green-rupee-container h2 {
+  font-size: 1rem;
+  border-bottom: 2px solid black;
+  background-color: rgb(0, 130, 4);
+}
+.green-dungeon-container .streched-container {
+  grid-column: 1/4;
+}
+.green-overworld-container > .streched-container {
+  grid-column: 2/4;
+}
 /* TRACKER */
 .tracker-container {
+  width: 580px;
   color: white;
 }
 .item-container,
@@ -755,8 +972,19 @@ body {
 }
 .item-gray {
   filter: grayscale(1);
-  width: 60px;
+  max-width: 100%;
   margin: 2px;
   cursor: pointer;
   align-content: center;
+}
+
+/* MEDIA QUEARIES  */
+
+@media all and (max-width: 1020px) {
+  #title {
+    display: none;
+  }
+  .tracker-container {
+    width: 450px;
+  }
 }
