--- a/mystery.css
+++ b/mystery.css
@@ -171,7 +171,8 @@ button {
   height: 170px;
   border-radius: 20px;
   overflow: hidden;
-  background-color: rgb(241, 241, 241);
+  color: rgb(255, 255, 255);
+  background-color: rgb(237, 99, 255);
 }
 .cow-container {
   border: 1px solid black;
@@ -186,11 +187,10 @@ button {
 .icon-container {
   grid-column: 1/3;
   text-align: center;
-  color: white;
 }
 .cow-container h2,
 .cow-container h3 {
-  background-color: rgb(105, 105, 105);
+  background-color: rgb(171, 0, 176);
   border-bottom: 2px solid black;
 }
 .cow-container img {
@@ -199,7 +199,7 @@ button {
 .cow-sanity h1 {
   font-size: 1.5rem;
   border-bottom: 1px solid black;
-  background-color: rgb(63, 63, 62);
+  background-color: rgb(138, 0, 143);
 }
 
 .cow-sanity img {
@@ -208,7 +208,7 @@ button {
   width: 39px;
   margin: 2px;
   padding: 2px;
-  background-color: rgb(243, 214, 180);
+  background-color: rgb(205, 243, 180);
   border-radius: 10px;
   cursor: pointer;
   border: 2px solid rgb(0, 0, 0);
@@ -803,6 +803,8 @@ button {
   width: 405px;
   overflow: hidden;
   border-radius: 20px;
+  text-align: center;
+  color: white;
 }
 .rupee-titles {
   display: grid;
@@ -813,11 +815,6 @@ button {
   grid-template-columns: repeat(3, 1fr);
 }
 
-.rupee-sanity h1,
-.rupee-sanity h2 {
-  text-align: center;
-  color: white;
-}
 .rupee-sanity h1 {
   font-size: 1.5rem;
   border-bottom: 1px solid black;
@@ -947,6 +944,85 @@ button {
 .green-overworld-container > .streched-container {
   grid-column: 2/4;
 }
+
+/* FAIRY SANITY */
+.fairy-sanity {
+  display: grid;
+  grid-template-rows: 30px auto;
+  height: 510px;
+  width: 405px;
+  overflow: hidden;
+  color: white;
+  border-radius: 20px;
+}
+.fairy-titles {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+#woodfall-btn,
+.woodfall-wrapper {
+  background-color: rgb(202, 75, 135);
+}
+#snowhead-btn,
+.snowhead-wrapper {
+  background-color: rgb(0, 136, 79);
+}
+#greatbay-btn,
+.greatbay-wrapper {
+  background-color: rgb(162, 87, 185);
+}
+#stonetower-btn,
+.stonetower-wrapper {
+  background-color: rgb(140, 119, 56);
+}
+
+.fairy-sanity img {
+  display: block;
+  height: 30px;
+  width: 30px;
+  margin: auto;
+  cursor: pointer;
+}
+
+.woodfall-fairy-container,
+.snowhead-fairy-container,
+.greatbay-fairy-container,
+.stonetower-fairy-container {
+  margin: auto;
+  width: 60%;
+}
+.woodfall-fairy-container h1,
+.snowhead-fairy-container h1,
+.greatbay-fairy-container h1,
+.stonetower-fairy-container h1 {
+  text-align: center;
+}
+.woodfall-fairy-container input,
+.snowhead-fairy-container input,
+.greatbay-fairy-container input,
+.stonetower-fairy-container input {
+  height: 26px;
+  width: 240px;
+  margin-top: 3px;
+}
+/* WOODFALL  */
+.woodfall-wrapper {
+  display: block;
+}
+/* SNOWHEAD */
+.snowhead-wrapper {
+  display: none;
+}
+/* GREAT BAY */
+.greatbay-wrapper {
+  display: none;
+}
+
+/* STONE TOWER */
+.stonetower-wrapper {
+  display: none;
+}
+
 /* TRACKER */
 .tracker-container {
   width: 580px;
