--- a/mystery.css
+++ b/mystery.css
@@ -15,9 +15,13 @@ input {
 }
 h1 {
   font-size: 1.5rem;
+  color: white;
+  text-align: center;
 }
 h2 {
   font-size: 1rem;
+  color: white;
+  text-align: center;
 }
 
 button {
@@ -26,6 +30,25 @@ button {
   font-size: 1.5rem;
   color: white;
   text-align: center;
+}
+.active {
+  display: block;
+}
+/* BUTTON EFFECTS */
+.cow-sanity img,
+.soil-sanity img,
+.hit-spot-sanity img,
+.cratesBarrels-sanity img,
+.mundane-sanity img,
+.snowball-sanity img,
+.rupee-sanity img,
+.keaton-sanity img,
+.gossip-sanity img {
+  filter: grayscale(1);
+}
+.grayscale {
+  filter: grayscale(1);
+  opacity: 20%;
 }
 /* HEADER */
 
@@ -73,7 +96,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   margin-right: 5px;
-  grid-gap: 12px;
+  gap: 12px;
 }
 
 /***********SANITY TRACKERS*************/
@@ -82,6 +105,15 @@ button {
   display: grid;
   grid-template-columns: 125px auto;
   grid-template-rows: 1fr 1fr 1fr;
+  height: 510px;
+}
+
+/* HIT-SPOT + CRATES & BARRELS */
+/* MUNDANE + SNOWBALLS */
+.sanity-bundle-container2,
+.sanity-bundle-container3 {
+  display: block;
+  width: 405px;
   height: 510px;
 }
 
@@ -121,11 +153,8 @@ button {
   overflow: hidden;
   background-color: rgb(3, 105, 41);
 }
-.scoop-sanity h2 {
+.scoop-sanity button {
   grid-column: 1/3;
-  font-size: 1.4rem;
-  color: white;
-  text-align: center;
   background-color: rgb(2, 59, 17);
   border-bottom: 1px solid black;
 }
@@ -177,37 +206,29 @@ button {
 .cow-container {
   border: 1px solid black;
 }
-.cow-container h2 {
-  font-size: 1rem;
+
+.cow-sanity button {
+  grid-column: 1/3;
+  border-bottom: 1px solid black;
+  background-color: rgb(126, 0, 130);
 }
 
-.cow-sanity h1,
-.cow-container h2,
-.cow-container h3,
 .icon-container {
   grid-column: 1/3;
   text-align: center;
 }
-.cow-container h2,
-.cow-container h3 {
+.cow-container h2 {
   background-color: rgb(171, 0, 176);
   border-bottom: 2px solid black;
 }
 .cow-container img {
   grid-row: 3/4;
 }
-.cow-sanity h1 {
-  font-size: 1.5rem;
-  border-bottom: 1px solid black;
-  background-color: rgb(138, 0, 143);
-}
 
 .cow-sanity img {
-  filter: grayscale(0);
-  height: 39px;
-  width: 39px;
-  margin: 2px;
-  padding: 2px;
+  height: 40px;
+  width: 40px;
+  margin-top: 2px;
   background-color: rgb(205, 243, 180);
   border-radius: 10px;
   cursor: pointer;
@@ -224,18 +245,18 @@ button {
   height: 335px;
   border-radius: 20px;
   overflow: hidden;
-  background-color: rgb(247, 211, 52);
+  background-color: rgb(255, 150, 58);
 }
 .soil-container {
   border: 1px solid black;
 }
-.soil-container h2 {
-  font-size: 1rem;
+
+.soil-sanity button {
+  grid-column: 1/3;
+  border-bottom: 1px solid black;
+  background-color: rgb(180, 87, 0);
 }
 
-.soil-sanity h1,
-.soil-container h2,
-.soil-container h3,
 .soil-container .icon-container {
   grid-column: 1/3;
   text-align: center;
@@ -243,20 +264,14 @@ button {
 }
 .soil-container h2,
 .soil-container h3 {
-  background-color: rgb(167, 105, 6);
+  background-color: rgb(243, 123, 10);
   border-bottom: 2px solid black;
 }
 .soil-container img {
   grid-row: 3/4;
 }
-.soil-sanity h1 {
-  font-size: 1.5rem;
-  border-bottom: 1px solid black;
-  background-color: rgb(136, 85, 4);
-}
 
 .soil-sanity img {
-  filter: grayscale(0);
   height: 40px;
   width: 40px;
   margin: 2px;
@@ -609,13 +624,7 @@ button {
   padding: 2px;
   background-color: rgb(0, 54, 0);
 }
-/* HIT-SPOT + CRATES & BARRELS */
-.sanity-bundle-container2 {
-  display: flex;
-  flex-wrap: wrap;
-  width: 405px;
-  height: 510px;
-}
+
 /* HIT-SPOT  */
 .hit-spot-sanity {
   display: grid;
@@ -627,17 +636,13 @@ button {
   overflow: hidden;
   background-color: rgb(28, 203, 159);
 }
-
-.hit-spot-sanity h1 {
+.hit-spot-sanity button {
   grid-column: 1/4;
-  color: white;
-  text-align: center;
   background-color: rgb(4, 69, 64);
   border-bottom: 1px solid black;
 }
 
 .hit-spot-sanity img {
-  filter: grayscale(0);
   height: 40px;
   width: 40px;
   margin-top: 5px;
@@ -670,12 +675,10 @@ button {
   width: 100%;
   margin-top: 5px;
   overflow: hidden;
-  background-color: rgb(191, 119, 51);
+  background-color: rgb(141, 102, 64);
 }
-.cratesBarrels-sanity h1 {
+.cratesBarrels-sanity button {
   grid-column: 1/4;
-  color: white;
-  text-align: center;
   background-color: rgb(69, 37, 4);
   border-bottom: 1px solid black;
 }
@@ -683,14 +686,13 @@ button {
   font-size: 1rem;
   color: white;
   text-align: center;
-  background-color: rgb(110, 52, 5);
+  background-color: rgb(113, 61, 18);
   border-bottom: 2px solid black;
 }
 .cratesBarrels-container {
   border: 1px solid black;
 }
 .cratesBarrels-sanity img {
-  filter: grayscale(0);
   height: 40px;
   width: 40px;
   margin-top: 5px;
@@ -699,13 +701,7 @@ button {
   cursor: pointer;
   border: 2px solid black;
 }
-/* MUNDANE + SNOWBALLS */
-.sanity-bundle-container3 {
-  display: flex;
-  flex-wrap: wrap;
-  width: 405px;
-  height: 510px;
-}
+
 /* MUNDANE  */
 .mundane-sanity {
   display: grid;
@@ -717,22 +713,18 @@ button {
   border-radius: 20px;
   background-color: rgb(191, 151, 255);
 }
-.mundane-sanity h1,
-.mundane-sanity h2 {
-  text-align: center;
-  color: white;
-}
-.mundane-sanity h1 {
-  font-size: 1.5rem;
+.mundane-sanity button {
   grid-column: 1/4;
-  grid-row: 1/2;
   border-bottom: 1px solid black;
   background-color: rgb(72, 0, 136);
+}
+.mundane-sanity h1 {
+  grid-column: 1/4;
+  grid-row: 1/2;
 }
 .mundane-sanity h2 {
   grid-column: 1/2;
   grid-row: 2/3;
-  font-size: 1rem;
   border-bottom: 2px solid black;
   background-color: rgb(106, 0, 193);
 }
@@ -740,7 +732,6 @@ button {
   border: 1px solid black;
 }
 .mundane-sanity img {
-  filter: grayscale(0);
   height: 40px;
   width: 40px;
   margin-top: 5px;
@@ -764,17 +755,14 @@ button {
   margin-top: 5px;
   background-color: rgb(72, 170, 231);
 }
-.snowball-sanity h1,
-.snowball-sanity h2 {
-  text-align: center;
-  color: white;
-}
-.snowball-sanity h1 {
-  font-size: 1.5rem;
+.snowball-sanity button {
   grid-column: 1/4;
-  grid-row: 1/2;
   border-bottom: 1px solid black;
   background-color: rgb(0, 77, 164);
+}
+.snowball-sanity h1 {
+  grid-column: 1/4;
+  grid-row: 1/2;
 }
 .snowball-sanity h2 {
   grid-column: 1/2;
@@ -787,7 +775,6 @@ button {
   border: 1px solid black;
 }
 .snowball-sanity img {
-  filter: grayscale(0);
   height: 40px;
   width: 40px;
   margin-top: 5px;
@@ -830,7 +817,6 @@ button {
   background-color: green;
 }
 .rupee-sanity img {
-  filter: grayscale(0);
   height: 40px;
   width: 40px;
   margin: 5px;
@@ -991,12 +977,6 @@ button {
   margin: auto;
   width: 60%;
 }
-.woodfall-fairy-container h1,
-.snowhead-fairy-container h1,
-.greatbay-fairy-container h1,
-.stonetower-fairy-container h1 {
-  text-align: center;
-}
 .woodfall-fairy-container input,
 .snowhead-fairy-container input,
 .greatbay-fairy-container input,
@@ -1023,6 +1003,109 @@ button {
   display: none;
 }
 
+/* KEATON GRASS */
+.keaton-sanity {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 30px auto;
+  height: 100px;
+  width: 405px;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.keaton-sanity button {
+  grid-column: 1/4;
+  border-bottom: 1px solid black;
+  background-color: rgb(120, 86, 0);
+}
+.keaton-container {
+  background-color: rgb(216, 184, 0);
+  border: 1px solid black;
+}
+.keaton-container h2 {
+  background-color: rgb(158, 126, 0);
+  border-bottom: 2px solid black;
+}
+.keaton-sanity img {
+  height: 40px;
+  width: 40px;
+  margin-top: 2px;
+  background-color: rgb(205, 243, 180);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid rgb(0, 0, 0);
+}
+/* FROG */
+.frog-sanity {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px auto;
+  overflow: hidden;
+  margin-top: 5px;
+  height: 100px;
+  width: 405px;
+  border-radius: 20px;
+}
+.frog-sanity button {
+  grid-column: 1/3;
+  border-bottom: 2px solid black;
+  background-color: rgb(30, 85, 0);
+}
+.frog-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: rgb(40, 133, 0);
+}
+.frog-container input {
+  margin-top: 5px;
+  height: 22px;
+  border-radius: 5px;
+  padding-left: 2px;
+  background-color: rgb(136, 255, 0);
+  border: none;
+  width: 155px;
+}
+.frog-sanity img {
+  height: 35px;
+  width: 35px;
+}
+/* FROG */
+.gossip-sanity {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 30px auto;
+  overflow: hidden;
+  margin-top: 5px;
+  height: 165px;
+  width: 405px;
+  border-radius: 20px;
+}
+.gossip-sanity button {
+  grid-column: 1/4;
+  border-bottom: 1px solid black;
+  background-color: rgb(0, 43, 112);
+}
+.gossip-container {
+  border: 1px solid black;
+  background-color: rgb(62, 130, 255);
+}
+.gossip-container h2 {
+  background-color: rgb(0, 77, 178);
+  border-bottom: 2px solid black;
+}
+.gossip-sanity > .streched-container {
+  grid-column: 1/4;
+}
+.gossip-sanity img {
+  height: 40px;
+  width: 40px;
+  margin-top: 2px;
+  background-color: rgb(234, 255, 48);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid rgb(0, 0, 0);
+}
 /* TRACKER */
 .tracker-container {
   width: 580px;
